--- a/source/stylesheets/footer.scss
+++ b/source/stylesheets/footer.scss
@@ -1,4 +1,4 @@
-#footer {
+footer {
   border-top: solid 1px #eee;
   padding: 1em;
   color: #999;
