--- a/source/stylesheets/header.scss
+++ b/source/stylesheets/header.scss
@@ -28,6 +28,8 @@ header {
     img {
       margin-right: 8pt;
       border-radius: 50%;
+      width: 50px;
+      height: 50px;
     }
     h1 {
       font-weight: 100;
