--- a/source/stylesheets/responsive.scss
+++ b/source/stylesheets/responsive.scss
@@ -2,22 +2,59 @@
   and (min-device-width: 320px)
   and (max-device-width: 736px)
   and (-webkit-min-device-pixel-ratio: 2) {
-    header {
-      position: static;
-      width: 100%;
-      .header-inner { position: static; }
-      .header-content {
-        display: block;
-        // img {
-        //   width: 1em;
-        //   height: 1em;
-        // }
+    body {
+      font-size: 3em;
+      line-height: 3em;
+      main {
+        margin-left: 0;
+        padding: 2em 1em;
+        #content .content-inside p {
+          font-size: 1em;
+        }
+        #content .content-inside {
+          // actual post
+          .post {
+            max-width: none;
+            .post-header {
+              h2 {
+                line-height: 1em;
+              }
+            }
+          }
+          // list of posts on /blogs page
+          .post-group ul.posts {
+            li {
+              display: block;
+              border-bottom: solid 1px #ccc;
+              margin-bottom: 2em;
+              span { display: block; }
+            }
+          }
+        }
       }
-      nav { text-align: center; }
-    }
-    #content { margin-left: 0; }
-    body { font-size: 3em; }
-    #content .content-inside p {
-      font-size: 1.5em;
+
+      header {
+        position: static;
+        padding: 1em;
+        width: 100%;
+        .header-inner {
+          position: static;
+          .header-content {
+            display: block;
+            margin-bottom: 1.5em;
+            img {
+              width: 300px;
+              height: 300px;
+            }
+          }
+
+          nav {
+            text-align: center;
+          }
+          .notes {
+            text-align: center;
+          }
+        }
+      }
     }
 }
